syntax = "proto3";

package proto;
option go_package = "github.com/calmato/gran-book/proto";

import "proto/common.proto";

service UserService {
  rpc ListUser(ListUserRequest) returns (UserListResponse);
  rpc ListFollow(ListFollowRequest) returns (FollowListResponse);
  rpc ListFollower(ListFollowerRequest) returns (FollowerListResponse);
  rpc MultiGetUser(MultiGetUserRequest) returns (UserListResponse);
  rpc GetUser(GetUserRequest) returns (UserResponse);
  rpc GetUserProfile(GetUserProfileRequest) returns (UserProfileResponse);
  rpc RegisterFollow(RegisterFollowRequest) returns (UserProfileResponse);
  rpc UnregisterFollow(UnregisterFollowRequest) returns (UserProfileResponse);
}

/**
 * Request
 */
message ListUserRequest {
  Search search = 1;
  int64 limit = 2;
  int64 offset = 3;
  Order order = 4;
}

message ListFollowRequest {
  string user_id = 1;
  int64 limit = 2;
  int64 offset = 3;
}

message ListFollowerRequest {
  string user_id = 1;
  int64 limit = 2;
  int64 offset = 3;
}

message MultiGetUserRequest {
  repeated string ids = 1;
}

message GetUserRequest {
  string id = 1;
}

message GetUserProfileRequest {
  string id = 1;
}

message RegisterFollowRequest {
  string id = 1;
}

message UnregisterFollowRequest {
  string id = 1;
}

/**
 * Response
 */
message UserResponse {
  string id = 1;
  string username = 2;
  string email = 3;
  string phone_number = 4;
  int32 role = 5;
  string thumbnail_url = 6;
  string self_introduction = 7;
  string last_name = 8;
  string first_name = 9;
  string last_name_kana = 10;
  string first_name_kana = 11;
  string created_at = 12;
  string updated_at = 13;
}

message UserListResponse {
  message User {
    string id = 1;
    string username = 2;
    string email = 3;
    string phone_number = 4;
    int32 role = 5;
    string thumbnail_url = 6;
    string self_introduction = 7;
    string last_name = 8;
    string first_name = 9;
    string last_name_kana = 10;
    string first_name_kana = 11;
    string created_at = 12;
    string updated_at = 13;
  }
  repeated User users = 1;
  Order order = 2;
  int64 limit = 3;
  int64 offset = 4;
  int64 total = 5;
}

message UserProfileResponse {
  string id = 1;
  string username = 2;
  string thumbnail_url = 3;
  string self_introduction = 4;
  bool is_follow = 5;
  bool is_follower = 6;
  int64 follow_count = 7;
  int64 follower_count = 8;
}

message FollowListResponse {
  message User {
    string id = 1;
    string username = 2;
    string thumbnail_url = 3;
    string self_introduction = 4;
    bool is_follow = 5;
  }
  repeated User users = 1;
  int64 limit = 2;
  int64 offset = 3;
  int64 total = 4;
}

message FollowerListResponse {
  message User {
    string id = 1;
    string username = 2;
    string thumbnail_url = 3;
    string self_introduction = 4;
    bool is_follow = 5;
  }
  repeated User users = 1;
  int64 limit = 2;
  int64 offset = 3;
  int64 total = 4;
}
